        - Fix incorrect $storage state on unexpected RDBMS disconnects and
          other failure events, preventing clean reconnection (RT#110429)
        - Ensure leaving an exception stack via Return::MultiLevel or something
          similar produces a large warning
        - Make sure exception objects stringifying to '' are properly handled
          and warned about (GH#15)
        - Fix incorrect data returned in a corner case of partial-select HRI
          invocation (no known manifestations of this bug in the field, see
          commit message for description of exact failure scenario)
        - Fix corner case of stringify-only overloaded objects being used in
          create()/populate()
        - Fix spurious ROLLBACK statements when a TxnScopeGuard fails a commit
          of a transaction with deferred FK checks: a guard is now inactivated
          immediately before the commit is attempted (RT#107159)
        - Work around unreliable $sth->finish() on INSERT ... RETURNING within
          DBD::Firebird on some compiler/driver combinations (RT#110979)
        - Fix several corner cases with Many2Many over custom relationships
        - Fix the Sybase ASE storage incorrectly attempting to retrieve an
          autoinc value when inserting rows containing blobs (GH#82)

    * Misc
        - Fix invalid variable names in ResultSource::View examples
        - Typo fixes from downstream debian packagers (RT#112007)
        - Skip tests in a way more intelligent and speedy manner when optional
          dependencies are missing
        - Make the Optional::Dependencies error messages cpanm-friendly
        - Incompatibly change values (not keys) of the hash returned by
          Optional::Dependencies::req_group_list (no known users in the wild)
        - Protect tests and codebase from incomplete caller() overrides, like
          e.g. RT#32640
        - Stop using bare $] throughout - protects the codebase from issues