@@ -6,6 +6,7 @@ no warnings 'exiting';
 
 use Test::More;
 use Test::Deep;
+use Test::Exception;
 
 use DBICTest;
 
@@ -548,6 +549,7 @@ sub cmp_structures {
   cmp_deeply($left, $right, $msg||()) or next INFTYPE;
 }
 
+
 {
   package DBICTest::_DoubleResult;
 
@@ -574,5 +576,19 @@ is_deeply(
     order_by => [qw(me.cdid tracks.title)],
   })->all_hri}) x 2 ],
 );
+
+
+{
+  package DBICTest::_DieTrying;
+
+  sub inflate_result {
+    die "nyah nyah nyah";
+  }
+}
+
+throws_ok {
+  $schema->resultset('CD')->search({}, { result_class => 'DBICTest::_DieTrying' })->all
+} qr/nyah nyah nyah/, 'Exception in custom inflate_result propagated correctly';
+
 
 done_testing;
