@@ -37,6 +37,7 @@ Revision history for DBIx::Class
           similar produces a large warning
         - Make sure exception objects stringifying to '' are properly handled
           and warned about (GH#15)
+        - Fix silencing of exceptions thrown by custom inflate_result() methods
         - Fix incorrect data returned in a corner case of partial-select HRI
           invocation (no known manifestations of this bug in the field, see
           commit message for description of exact failure scenario)
